Label Encoding terminado

--- a/Scripts/2.Preprocessing/LidandoComValoresFaltantes.ipynb
+++ b/Scripts/2.Preprocessing/LidandoComValoresFaltantes.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from numbers import Number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +108,6 @@
     "        moda = dfTreino[atribute].mode()[0]\n",
     "        dfTreino[atribute].replace(np.NaN, moda, inplace=True)\n",
     "        dfTeste[atribute].replace(np.NaN, moda, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 371,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "listOfAtributes = ['g08', 'm10', 'm11', 'e36', 'd20', 'd42', 'd45', 'l2', 'f12', 'f16', 'f21', 'f23', 'f26', 'f29', 'f35', 'p11_a', 'p16_a', 'G10_cor_pele', 'G12_conjugal', 'E1_escolaridade', 'E10_emprego', 'd17', 'f40', 'CTQ_PA_dic2', 'CTQ_EA_dic2', 'CTQ_SA_dic2', 'SCID_bipolar', 'SCID_depre', 'SCID_psicotico', 'SCID_ansi', 'P13_14A', 'P19_dic', 'P1_dic', 'D23_3cat', 'F9ABC', 'F8ABC', 'M_cronicas', 'F8_9ABC', 'Traumas']\n",
-    "replaceByMode(listOfAtributes)"
    ]
   },
   {
@@ -160,44 +151,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "def replaceByMean(listOfAtributes):\n",
     "    for atribute in listOfAtributes:\n",
-    "        print(atribute)\n",
     "        mean = dfTreino[atribute].mean()\n",
     "        dfTreino[atribute].fillna(mean, inplace=True)\n",
     "        dfTeste[atribute].fillna(mean, inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 373,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f2\n",
-      "g09_idade\n",
-      "D8_9\n",
-      "g09_menos_d03\n",
-      "porc_vida_doente\n",
-      "D25B_div_idade\n",
-      "D27B_div_idade\n",
-      "D28B_div_idade\n",
-      "D57_div_idade\n",
-      "d03\n",
-      "d11\n"
-     ]
-    }
-   ],
    "source": [
-    "listOfAtributes = ['f2', 'g09_idade', 'D8_9', 'g09_menos_d03', 'porc_vida_doente', 'D25B_div_idade', 'D27B_div_idade', 'D28B_div_idade', 'D57_div_idade', 'd03', 'd11']\n",
-    "replaceByMean(listOfAtributes)"
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_attributes = []\n",
+    "categorical_attributes = []\n",
+    "\n",
+    "list_of_attributes = list(dfTreino)\n",
+    "\n",
+    "for attribute in list_of_attributes:\n",
+    "    value = np.NAN\n",
+    "    count = 0\n",
+    "    \n",
+    "    while(value is np.NAN):\n",
+    "        value = dfTreino[attribute][count]\n",
+    "        count = count + 1\n",
+    "        \n",
+    "    if(isinstance(value, str)):\n",
+    "        categorical_attributes.append(attribute)\n",
+    "    elif(isinstance(value, Number)):\n",
+    "        numeric_attributes.append(attribute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "replaceByMode(categorical_attributes)\n",
+    "replaceByMean(numeric_attributes)"
    ]
   },
   {
@@ -229,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "listOfAtributes = ['f2', 'M_cronicas', 'F8_9ABC', 'Traumas', 'g09_idade', 'D8_9', 'g09_menos_d03']\n",
+    "listOfAtributes = ['ctq_pos_sum']\n",
     "\n",
     "ConvertFloatToInt(listOfAtributes)"
    ]
@@ -266,12 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfTreino.to_csv('../../Database/301_TreinoDatabase.csv', index=False)\n",
-    "dfTeste.to_csv('../../Database/301_TesteDatabase.csv', index=False)"
+    "dfTreino.to_csv('../../Database/302_TreinoDatabase.csv', index=False)\n",
+    "dfTeste.to_csv('../../Database/302_TesteDatabase.csv', index=False)"
    ]
   },
   {
@@ -280,6 +286,13 @@
    "source": [
     "----"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
