Instancias com valor Não na no atributo Class foram renomeados para No

--- a/Scripts/3.Transformation/Encoding.ipynb
+++ b/Scripts/3.Transformation/Encoding.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 444,
    "metadata": {
     "scrolled": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,14 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [],
    "source": [
     "listOfAttributes = GetListOfAttributesByUniqueValues(['Leve', 'Grave'])\n",
     "\n",
-    "\n",
-    "LabelEncodingPresenteAusente(listOfAtributes)"
+    "LabelEncodingGraveLeve(listOfAtributes)"
    ]
   },
   {
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,13 +558,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [],
    "source": [
     "listOfAttributes = ['abuso_sexual_crack', 'F8ABC', 'M_doencas', 'E10_emprego', 'G10_cor_pele', 'p11_a', 'd17', 'hiv', 'g08']\n",
     "\n",
-    "OneHotEncoding(listOfAttributes)"
+    "OneHotEncoding(listOfAttributes)\n",
+    "\n",
+    "dfTreino.drop(columns=listOfAttributes, inplace=True)\n",
+    "dfTeste.drop(columns=listOfAttributes, inplace=True)"
    ]
   },
   {
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 465,
    "metadata": {},
    "outputs": [],
    "source": [
