--- a/Scripts/3.Transformation/Encoding.ipynb
+++ b/Scripts/3.Transformation/Encoding.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,13 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "listOfAttributes = GetListOfAttributesByUniqueValues(['Leve', 'Grave'])\n",
     "\n",
-    "LabelEncodingGraveLeve(listOfAtributes)"
+    "LabelEncodingGraveLeve(listOfAttributes)"
    ]
   },
   {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,12 +579,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfTreino.to_csv('../../Database/402_TreinoDatabase.csv')\n",
-    "dfTeste.to_csv('../../Database/402_TesteDatabase.csv')"
+    "dfTreino.to_csv('../../Database/402_TreinoDatabase.csv', index=False)\n",
+    "dfTeste.to_csv('../../Database/402_TesteDatabase.csv', index=False)"
    ]
   },
   {
