--- a/Scripts/4.DataMining/RandomForest.ipynb
+++ b/Scripts/4.DataMining/RandomForest.ipynb
@@ -6,6 +6,208 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import sklearn.metrics as metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ReadData():\n",
+    "    dfTreino = pd.read_csv('../../Database/402_TreinoDatabase.csv')\n",
+    "    dfTeste = pd.read_csv('../../Database/402_TesteDatabase.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SeparateTrainTest():\n",
+    "    X_train = dfTreino.iloc[:,:-1] \n",
+    "    X_test = dfTeste.iloc[:,:-1] \n",
+    "\n",
+    "    y_train = dfTreino['class']\n",
+    "    y_test = dfTeste['class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CreateClassifier():\n",
+    "    rf_clf = RandomForestClassifier(n_estimators=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def TrainClassifier():\n",
+    "    rf_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ReadData()\n",
+    "SeparateTrainTest()\n",
+    "CreateClassifier()\n",
+    "TrainClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acuracia: 0.66\n",
+      "Precision: 0.8\n",
+      "Recall: 0.49382716049382713\n",
+      "F1-Score: 0.6106870229007633\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Acuracia:', metric.accuracy_score(y_test, rf_clf.predict(X_test)))\n",
+    "print('Precision:', metric.precision_score(y_test, rf_clf.predict(X_test)))\n",
+    "print('Recall:', metric.recall_score(y_test, rf_clf.predict(X_test)))\n",
+    "print('F1-Score:', metric.f1_score(y_test, rf_clf.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Yes = len(dfTreino[dfTreino['class'] == 1]) + len(dfTeste[dfTeste['class'] == 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "No = len(dfTreino[dfTreino['class'] == 0]) + len(dfTeste[dfTeste['class'] == 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "337"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Yes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "411"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "No"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../../Database/102_Database.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(787, 57)"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
